# esp32_template_std

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
