[package]
name = "esp32_template"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = true
opt-level = 0

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
anyhow = "1"

[build-dependencies]
embuild = "0.33"
dotenvy = "0.15"
